--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,5 +1,8 @@
+:root{
+  margin: 0px;
+  padding: 0px;
+}
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
