--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,8 +1,9 @@
-:root{
+@import url(./color.css);
+body {
   margin: 0px;
   padding: 0px;
-}
-body {
+  background-color: var(--primary);
+  color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
