--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -1,4 +1,8 @@
 @import url(./color.css);
+::selection{
+  background-color: var(--navLink);
+  color: var(--primary);
+}
 body {
   margin: 0px;
   padding: 0px;
