--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -1,19 +1,19 @@
 @import url(./color.css);
 
 .nav-panel{
-    position: fixed;width: 100%;background-color: #313131;
+    position: fixed;width: fit-content;background-color: transparent;
+    top: 50%;
     right: 0px;
-    left: 0px;
-    bottom: 0px;
+    margin-top: -230px;
 }
 .nav-panel ul {
-    display: flex;
-    justify-content: space-between;
+    display: inline-block;
+    
     padding: 0px 30px;
 }
 
 .nav-panel ul li{
-    
+    margin-top: 40px;
     list-style: none;
     background-color: rgb(80, 80, 80);
 
@@ -43,4 +43,52 @@ position: relative;
 }
 .nav-panel ul li a>span{
     display: none;
+}
+
+
+@media (max-width: 912px) {
+    .nav-panel{
+        position: fixed;width: 100%;background-color: #313131;
+        right: 0px;
+        left: 0px;
+        bottom: 0px;
+    }
+    .nav-panel ul {
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 30px;
+    }
+    
+    .nav-panel ul li{
+        
+        list-style: none;
+        background-color: rgb(80, 80, 80);
+    
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    }
+    .nav-panel ul li:hover{
+        background-color: var(--navLink);
+        color: #313131;
+        cursor: pointer;
+        /* border: 2px solid #808080; */
+    }
+    .nav-panel ul li:active{
+        background-color: var(--navLink);
+        color: #242424;
+        cursor: pointer;
+        /* border: 2px solid #808080; */
+    }
+    .nav-panel ul li a>i{
+        color: white;
+        text-decoration: none;
+        position: absolute;
+        top: 30%;
+        left: 30%;
+    }
+    .nav-panel ul li a>span{
+        display: none;
+    }
 }
