--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -69,7 +69,7 @@ position: relative;
         
         list-style: none;
         background-color: rgb(80, 80, 80);
-    
+    margin-top: 0px;
     border-radius: 50%;
     width: 40px;
     height: 40px;
