--- a/frontend/src/components/admin/styles/Signup.css
+++ b/frontend/src/components/admin/styles/Signup.css
@@ -1,33 +1,30 @@
-
-.login-form-wrapper{
+.signup-form-wrapper{
     width: 100%;
     height: 100vh;
     background-color: white;
     margin-bottom: -80px;
 }
-
-
-.login-form-wrapper form{
+.signup-form-wrapper form{
     background-color: rgb(255, 255, 255);
     max-width: 350px;
     height: auto;
     text-align: center;
-    padding: 60px 20px;
+    padding: 20px;
     position: absolute;
     top: 50%;
-    margin-top: -240px;
+    margin-top: -270px;
     left: 50%;
     margin-left: -175px;
     box-shadow: -2px 2px 10px rgb(160, 160, 160);
     border-radius: 9px;
 }
-.login-form-wrapper form:hover{
+.signup-form-wrapper form:hover{
     transition: .3s all ease;
     box-shadow: -5px 5px 20px rgb(160,160,160);
 }
-.login-form-wrapper form p{
+.signup-form-wrapper form p{
     color: rgb(83, 83, 83);
 }
-.login-form-wrapper form div{
-    margin-top: 20px;
+.signup-form-wrapper form div{
+    margin-top: 10px;
 }
